# allsorts

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
allsorts/: Cargo.toml  build.rs
allsorts-capi/: Cargo.toml  README.md  build.rs
allsorts-capi/include/: allsorts.h
allsorts-capi/src/: lib.rs
allsorts/src/: cmap.ddl  cmap.rs  lib.rs  otf.ddl
benches/: bench-shape.rs
criterion/: bench-read.rs  bench-shape.rs
examples/: subset_with_mapping.rs
src/: big5.rs  binary.rs  bitmap.rs  cff.rs  checksum.rs  context.rs  emoji.rs  error.rs  font.rs  font_data.rs  font_data_impl.rs  font_specimen.rs  font_tables.rs  fontfile.rs  gdef.rs  geom.rs  get_name.rs  glyph_info.rs  glyph_position.rs  glyph_width.rs  gpos.rs  gsub.rs  indic.rs  layout.rs  lib.rs  macroman.rs  morx.rs  opentype.rs  outline.rs  post.rs  size.rs  subset.rs  tables.rs  tag.rs  tests.rs  unicode.rs  variations.rs  woff.rs  woff2.rs
src/binary/: read.rs  write.rs
src/bitmap/: cbdt.rs  sbix.rs
src/cff/: cff2.rs  charstring.rs  outline.rs  subset.rs
src/cff/charstring/: argstack.rs
src/cff/outline/: charstring.rs
src/layout/: morx.rs
src/scripts/: arabic.rs  indic.rs  khmer.rs  mod.rs  mongolian.rs  myanmar.rs  syllable.rs  syriac.rs  thai_lao.rs  tibetan.rs
src/tables/: cmap.rs  colr.rs  cpal.rs  glyf.rs  kern.rs  loca.rs  morx.rs  os2.rs  svg.rs  variable_fonts.rs
src/tables/cmap/: subset.rs
src/tables/colr/: svg_painter.rs
src/tables/glyf/: outline.rs  subset.rs  variation.rs
src/tables/variable_fonts/: avar.rs  cvar.rs  fvar.rs  gvar.rs  hvar.rs  mvar.rs  stat.rs
src/unicode/: emoji_data.rs  mcc.rs
src/woff2/: collection.rs  lut.rs
tests/: aots.rs  arabic.rs  cff.rs  common.rs  indic.rs  khmer.rs  mongolian.rs  myanmar.rs  opentype.rs  shape.rs  subset_and_map.rs  subset_and_map_simple_validation.rs  syriac.rs  thai_lao.rs  tibetan.rs  woff.rs  woff2.rs
tests/aots/: README.md  aots2testrust.xsl  classdef1_font1.xml  classdef1_font2.xml  classdef1_font3.xml  classdef1_font4.xml  classdef2_font1.xml  classdef2_font2.xml  classdef2_font3.xml  classdef2_font4.xml  cmap0_font1.xml  cmap10_font1.xml  cmap10_font2.xml  cmap12_font1.xml  cmap14_font1.xml  cmap2_font1.xml  cmap4_font1.xml  cmap4_font2.xml  cmap4_font3.xml  cmap4_font4.xml  cmap6_font1.xml  cmap6_font2.xml  cmap8_font1.xml  cmap_composition_font1.xml  cmap_subtableselection_font1.xml  cmap_subtableselection_font2.xml  cmap_subtableselection_font3.xml  cmap_subtableselection_font4.xml  cmap_subtableselection_font5.xml  gpos1_1_lookupflag_f1.xml  gpos1_1_simple_f1.xml  gpos1_1_simple_f2.xml  gpos1_1_simple_f3.xml  gpos1_1_simple_f4.xml  gpos1_2_font1.xml  gpos1_2_font2.xml  gpos2_1_font6.xml  gpos2_1_font7.xml  gpos2_1_lookupflag_f1.xml  gpos2_1_lookupflag_f2.xml  (+168 more)
tests/font_specimen/: SourceSans3.abc.otf.body.html  SourceSans3.abc.otf.head.html
tests/font_specimen/fonts/: big5.cmap  macroman.cmap
tests/fonts/: README.md
tests/fonts/licenses/: Amaranth-Regular.txt  AnnapurnaSIL.txt  Battambang.txt  Chilanka.txt  ChromaCheck.txt  Dyuthi.txt  KacstBook.txt  Mandali.txt  NafeesNastaleeq.txt  Padauk-Regular.txt  Rachana.txt  Rachana_w01.txt  Rekha.txt  Saab.txt  Sahadeva.txt  SamyakGujarati.txt  Scheherazade-Regular.txt  SiyamRupali.txt  TAMu_Kalyani.txt  TestGSUBThree.txt  padmaa.txt
tests/fonts/opentype/: README.md  test-font.ttx
tests/fonts/sbix/: sbix-dupe.ttx
tests/fonts/svg/: gzipped.py  gzipped.ttx
tests/fonts/woff1/: README.md
tests/fonts/woff2/: README.md
tests/indic/: README.md  bad.bn  bad.gu  bad.hi  bad.ml  bad.ta  good.bn  good.gu  good.hi  good.kn  good.ml  good.or  good.pa  good.si  good.ta  good.te
tests/indic/bad/: bad.bn  bad.gu  bad.hi  bad.kn  bad.ml  bad.or  bad.pa  bad.si  bad.ta  bad.te
tests/indic/directwrite/: good-annapurna.hi  good-chilanka.ml  good-dyuthi.ml  good-kalinga.or  good-mandali.te  good-nirmala.hi  good-nirmala.kn  good-nirmala.ml  good-nirmala.or  good-nirmala.pa  good-nirmala.ta  good-nirmala.te  good-noto-sans.bn  good-noto-sans.gu  good-noto-sans.hi  good-noto-sans.kn  good-noto-sans.ml  good-noto-sans.or  good-noto-sans.pa  good-noto-sans.ta  good-noto-sans.te  good-noto-serif.bn  good-noto-serif.gu  good-noto-serif.hi  good-noto-serif.kn  good-noto-serif.ml  good-noto-serif.ta  good-noto-serif.te  good-rachana-indic1.ml  good-rachana-indic2.ml  good-saab.pa  good-sahadeva.hi  good-tamu.ta
tests/indic/harfbuzz/: good-annapurna.hi  good-chilanka.ml  good-dyuthi.ml  good-gautami.te  good-iskoola.si  good-kalinga.or  good-latha.ta  good-lohit.bn  good-lohit.gu  good-lohit.hi  good-lohit.kn  good-lohit.ml  good-lohit.or  good-lohit.ta  good-lohit.te  good-mandali.te  good-mangal.hi  good-nirmala.hi  good-nirmala.kn  good-nirmala.ml  good-nirmala.or  good-nirmala.pa  good-nirmala.si  good-nirmala.ta  good-nirmala.te  good-noto-sans.bn  good-noto-sans.gu  good-noto-sans.hi  good-noto-sans.kn  good-noto-sans.ml  good-noto-sans.or  good-noto-sans.pa  good-noto-sans.si  good-noto-sans.ta  good-noto-sans.te  good-noto-serif.bn  good-noto-serif.gu  good-noto-serif.hi  good-noto-serif.kn  good-noto-serif.ml  (+15 more)
tests/khmer/: bad  good
tests/khmer/harfbuzz/: good-battambang  good-daunpenh  good-khmer-ui  good-noto-sans  good-noto-serif
tests/myanmar/: README.md  good
tests/myanmar/harfbuzz/: good-padauk
tests/opentype/: KLEI-LICENSE  README.md
tests/woff1/: metadata.xml
tests/woff2/: README.md  SFNT-TTF-Composite.ttx
