[package]
name = "allsorts"
version = "0.5.1"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/allsorts"
documentation = "https://docs.rs/crate/allsorts"
repository = "https://github.com/yeslogic/allsorts"

readme = "README.md"
license = "Apache-2.0"
include = ["/LICENSE", "src/**/*"]

description = "Font parser, shaping engine, and subsetter for OpenType, WOFF, and WOFF2"
keywords = ["font", "shaping", "opentype", "truetype", "parse"]
categories = ["text-processing"]

[dependencies]
bitflags = "1.0"
bitreader = "0.3.2"
brotli-decompressor = "2.3"
byteorder = "1.2"
encoding_rs = "0.8.16"
flate2 = { version = "1.0", default-features = false, features = ["zlib"] }
glyph-names = "0.1"
itertools = "0.8"
lazy_static = "1.3.0"
libc = "0.2"
log = "0.4"
num-traits = "0.2"
rustc-hash = "1.1.0"
self_cell = "0.7.1"
tinyvec = { version = "1", features = ["alloc"] }
ucd-trie = "0.1.2"
unicode-general-category = "0.3"
unicode-joining-type = "0.4.0"

# Optional dependencies
pathfinder_geometry = { version = "0.5.1", optional = true }

[dev-dependencies]
regex = "1.1.6"

# criterion = "0.3"
# # used by criterion.
# # 2.3.2 introduced use of cfg(doctest), which is not stable on 1.38.0
# walkdir = "= 2.3.1"

# [[bench]]
# name = "bench-shape"
# harness = false

# [[bench]]
# name = "bench-read"
# harness = false

[features]
default = ["outline"]
prince = []
outline = ["pathfinder_geometry"]
