[package]
name = "allsorts"
version = "0.15.0"
authors = ["YesLogic Pty. Ltd. <info@yeslogic.com>"]
edition = "2018"

homepage = "https://github.com/yeslogic/allsorts"
documentation = "https://docs.rs/crate/allsorts"
repository = "https://github.com/yeslogic/allsorts"

readme = "README.md"
license = "Apache-2.0"
include = ["/LICENSE", "src/**/*"]

description = "Font parser, shaping engine, and subsetter for OpenType, WOFF, and WOFF2"
keywords = ["font", "shaping", "opentype", "truetype", "parse"]
categories = ["text-processing"]

[dependencies]
bitflags = "1.3"
bitreader = "0.3.6"
brotli-decompressor = "4.0"
byteorder = "1.4"
crc32fast = "1.3.2"
encoding_rs = "0.8.32"
flate2 = { version = "1.0", default-features = false, optional = true }
glyph-names = "0.2"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4"
num-traits = "0.2"
ouroboros = "0.17"
pathfinder_geometry = { version = "0.5.1" }
rustc-hash = "1.1.0"
tinyvec = { version = "1", features = ["std", "rustc_1_57"] }
ucd-trie = "0.1.5"
unicode-canonical-combining-class = "0.5.0"
unicode-general-category = "0.6.0"
unicode-joining-type = "0.7.0"

# specimen
upon = { version = "0.8.1", default-features = false, optional = true }
unicode-blocks = { version = "0.1.9", optional = true }

[dev-dependencies]
regex = "1.7.1"

# criterion = "0.3"

# [[bench]]
# name = "bench-shape"
# harness = false

# [[bench]]
# name = "bench-read"
# harness = false

[features]
default = ["outline", "flate2_zlib"]
prince = []
outline = []
specimen = ["dep:upon", "dep:unicode-blocks"]
flate2_zlib = ["flate2/zlib"]
flate2_rust = ["flate2/rust_backend"]
