[package]
name = "allsorts"
description = "A font shaping engine. For tasty typesetting!"
version = "0.1.0"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
readme = "../README.md"
license = "Apache-2.0"
homepage = "https://github.com/yeslogic/allsorts"
documentation = "https://docs.rs/allsorts"
repository = "https://github.com/yeslogic/allsorts"
categories = ["parser-implementations", "text-processing"]
keywords = ["font", "layout", "opentype", "text", "unicode"]

[dependencies]
ddl-util = { git = "ssh://github.com/yeslogic/ddl", rev = "c04b28340e77fb9a3b55775ad598ae79313326df" }

[build-dependencies]
ddl = { git = "ssh://github.com/yeslogic/ddl", rev = "c04b28340e77fb9a3b55775ad598ae79313326df" }

[dev-dependencies]
byteorder = "1.1"
